# operations1-sdk-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/order/: create_order_raw.py  create_order_typed.py  list_orders_raw.py  list_orders_typed.py
examples/report/: get_report_by_id.py  list_all_reports.py  list_reports_raw.py  list_reports_typed.py
src/operations1_sdk/: __init__.py  client.py
src/operations1_sdk/models/: __init__.py  common.py  requests.py  responses.py
src/operations1_sdk/resources/: __init__.py
src/operations1_sdk/resources/orders/: __init__.py  api.py  models.py  types.py
src/operations1_sdk/resources/reports/: __init__.py  api.py  models.py  types.py
src/operations1_sdk/types/: __init__.py  params.py
